# checkpoint2-streamlit

./: .gitignore  README.md  classification.py  financial.py  main.py  requierement  requirements.txt
checkpoint2-stremlit/: README.md  main.py  pyproject.toml
checkpoint2-stremlit/checkpoint2_stremlit/: __init__.py  dataset.py  features.py  plots.py
checkpoint2-stremlit/checkpoint2_stremlit/modeling/: predict.py  train.py
checkpoint2-stremlit/docs/: mkdocs.yml
checkpoint2-stremlit/docs/docs/: index.md
